spacing issues???

--- a/src/pages/Filter.module.css
+++ b/src/pages/Filter.module.css
@@ -3,13 +3,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: fixed;
   width: 100vw;
   height: 100vh;
-  overflow: auto;
   margin: 0 auto;
-  top: 0;
-  left: 0;
   font-family: Isenheim, 'Times New Roman' !important;
   font-size: 24px;
 }
